# GameEngine

./: .gitignore  CMakeLists.txt  LICENSE  main.cpp
graphics/: CMakeLists.txt  Renderer.cpp  Renderer.h
input/: CMakeLists.txt  InputSystem.cpp  InputSystem.h
scenery/: CMakeLists.txt  SceneManager.cpp  SceneManager.h
scenery/scenes/: BasicScene.h  Scene.h
util/: CMakeLists.txt  Logger.cpp  Logger.h  MathUtil.h  Util.h
